# bbs

./: adal.sh  add-squid-user.sh  add2www.sh  arcom.sh  arlist.sh  backsite.sh  cc.sh  checkphp.sh  chug.sh  cml.sh  config-postfix.sh  credb.sh  crehome.sh  dd.sh  ddt.sh  delsite.sh  disite.sh  dropdb.sh  dropsite.sh  duh.sh  dupsource.sh  dw.sh  ensite.sh  ff.sh  fup-vm.sh  fup.sh  fwa.sh  fwd.sh  fwf.sh  g20.sh  gencert.sh  goa.sh  goal.sh  h.sh  install-jdk.sh  install-wordpress.sh  moml.sh  my-aliases.sh  nensite.sh  perf.sh  (+29 more)
buy-sell/: CMakeLists.txt  actual-output.txt  build.bat  expected-output.txt  main.cpp  ohlc.csv  run.bat
gitpy/: commit-all.py
nvidia/: cool-bit.sh  list-settings.sh  query-fan-speed.sh  query-mem.sh  query-pstate.sh  query-temp.sh  rig-config.sh
screen-alert/: Windows-screen-ocr-alert.py  install.bat  run.bat  test_tesseract.py
wav/: ss.sh  tor8k.sh  wavinfo.sh
